Add first cut at linear svm textmodel
Based on RSSL::svmlin()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,10 +92,12 @@ S3method(coef,predict.textmodel_affinity)
 S3method(coef,textmodel_ca)
 S3method(coef,textmodel_lsa)
 S3method(coef,textmodel_nb)
+S3method(coef,textmodel_svm)
 S3method(coef,textmodel_wordfish)
 S3method(coef,textmodel_wordscores)
 S3method(coefficients,predict.textmodel_affinity)
 S3method(coefficients,textmodel_nb)
+S3method(coefficients,textmodel_svm)
 S3method(coefficients,textmodel_wordscores)
 S3method(convert,default)
 S3method(convert,dfm)
@@ -248,6 +250,7 @@ S3method(phrase,tokens)
 S3method(predict,textmodel_affinity)
 S3method(predict,textmodel_lsa)
 S3method(predict,textmodel_nb)
+S3method(predict,textmodel_svm)
 S3method(predict,textmodel_wordfish)
 S3method(predict,textmodel_wordscores)
 S3method(print,coefficients_textmodel)
@@ -258,6 +261,7 @@ S3method(print,kwic)
 S3method(print,phrases)
 S3method(print,predict.textmodel_affinity)
 S3method(print,predict.textmodel_nb)
+S3method(print,predict.textmodel_svm)
 S3method(print,predict.textmodel_wordfish)
 S3method(print,predict.textmodel_wordscores)
 S3method(print,settings)
@@ -267,6 +271,7 @@ S3method(print,summary.influence.predict.textmodel_affinity)
 S3method(print,summary.textmodel)
 S3method(print,textmodel_affinity)
 S3method(print,textmodel_nb)
+S3method(print,textmodel_svm)
 S3method(print,textmodel_wordfish)
 S3method(print,textmodel_wordscores)
 S3method(print,tokens)
@@ -285,6 +290,7 @@ S3method(summary,character)
 S3method(summary,corpus)
 S3method(summary,influence.predict.textmodel_affinity)
 S3method(summary,textmodel_nb)
+S3method(summary,textmodel_svm)
 S3method(summary,textmodel_wordfish)
 S3method(summary,textmodel_wordscores)
 S3method(tail,corpus)
@@ -298,6 +304,8 @@ S3method(textmodel_ca,dfm)
 S3method(textmodel_lsa,dfm)
 S3method(textmodel_nb,default)
 S3method(textmodel_nb,dfm)
+S3method(textmodel_svm,default)
+S3method(textmodel_svm,dfm)
 S3method(textmodel_wordfish,default)
 S3method(textmodel_wordfish,dfm)
 S3method(textmodel_wordscores,default)
@@ -491,6 +499,7 @@ export(textmodel_affinity)
 export(textmodel_ca)
 export(textmodel_lsa)
 export(textmodel_nb)
+export(textmodel_svm)
 export(textmodel_wordfish)
 export(textmodel_wordscores)
 export(textplot_influence)
@@ -554,6 +563,7 @@ import(ggplot2)
 import(methods)
 import(stopwords)
 import(stringi)
+importFrom(RSSL,svmlin)
 importFrom(Rcpp,evalCpp)
 importFrom(RcppParallel,RcppParallelLibs)
 importFrom(RcppParallel,setThreadOptions)
