--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: quanteda
-Version: 1.4.2
+Version: 1.4.3
 Title: Quantitative Analysis of Textual Data
 Description: A fast, flexible, and comprehensive framework for 
     quantitative text analysis in R.  Provides functionality for corpus management,
@@ -45,6 +45,7 @@ Imports:
     RSpectra,
     Rcpp (>= 0.12.12),
     RcppParallel,
+    RSSL,
     sna,
     SnowballC,
     spacyr,
@@ -148,6 +149,7 @@ Collate:
     'textmodel_ca.R'
     'textmodel_lsa.R'
     'textmodel_nb.R'
+    'textmodel_svm.R'
     'textmodel_wordfish.R'
     'textmodel_wordscores.R'
     'textplot_influence.R'
