--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,11 +93,13 @@ S3method(coef,textmodel_ca)
 S3method(coef,textmodel_lsa)
 S3method(coef,textmodel_nb)
 S3method(coef,textmodel_svm)
+S3method(coef,textmodel_svmlin)
 S3method(coef,textmodel_wordfish)
 S3method(coef,textmodel_wordscores)
 S3method(coefficients,predict.textmodel_affinity)
 S3method(coefficients,textmodel_nb)
 S3method(coefficients,textmodel_svm)
+S3method(coefficients,textmodel_svmlin)
 S3method(coefficients,textmodel_wordscores)
 S3method(convert,default)
 S3method(convert,dfm)
@@ -251,6 +253,7 @@ S3method(predict,textmodel_affinity)
 S3method(predict,textmodel_lsa)
 S3method(predict,textmodel_nb)
 S3method(predict,textmodel_svm)
+S3method(predict,textmodel_svmlin)
 S3method(predict,textmodel_wordfish)
 S3method(predict,textmodel_wordscores)
 S3method(print,coefficients_textmodel)
@@ -262,6 +265,7 @@ S3method(print,phrases)
 S3method(print,predict.textmodel_affinity)
 S3method(print,predict.textmodel_nb)
 S3method(print,predict.textmodel_svm)
+S3method(print,predict.textmodel_svmlin)
 S3method(print,predict.textmodel_wordfish)
 S3method(print,predict.textmodel_wordscores)
 S3method(print,settings)
@@ -272,6 +276,7 @@ S3method(print,summary.textmodel)
 S3method(print,textmodel_affinity)
 S3method(print,textmodel_nb)
 S3method(print,textmodel_svm)
+S3method(print,textmodel_svmlin)
 S3method(print,textmodel_wordfish)
 S3method(print,textmodel_wordscores)
 S3method(print,tokens)
@@ -291,6 +296,7 @@ S3method(summary,corpus)
 S3method(summary,influence.predict.textmodel_affinity)
 S3method(summary,textmodel_nb)
 S3method(summary,textmodel_svm)
+S3method(summary,textmodel_svmlin)
 S3method(summary,textmodel_wordfish)
 S3method(summary,textmodel_wordscores)
 S3method(tail,corpus)
@@ -306,6 +312,8 @@ S3method(textmodel_nb,default)
 S3method(textmodel_nb,dfm)
 S3method(textmodel_svm,default)
 S3method(textmodel_svm,dfm)
+S3method(textmodel_svmlin,default)
+S3method(textmodel_svmlin,dfm)
 S3method(textmodel_wordfish,default)
 S3method(textmodel_wordfish,dfm)
 S3method(textmodel_wordscores,default)
@@ -500,6 +508,7 @@ export(textmodel_ca)
 export(textmodel_lsa)
 export(textmodel_nb)
 export(textmodel_svm)
+export(textmodel_svmlin)
 export(textmodel_wordfish)
 export(textmodel_wordscores)
 export(textplot_influence)
@@ -563,10 +572,12 @@ import(ggplot2)
 import(methods)
 import(stopwords)
 import(stringi)
+importFrom(LiblineaR,LiblineaR)
 importFrom(RSSL,svmlin)
 importFrom(Rcpp,evalCpp)
 importFrom(RcppParallel,RcppParallelLibs)
 importFrom(RcppParallel,setThreadOptions)
+importFrom(SparseM,as.matrix.csr)
 importFrom(data.table,data.table)
 importFrom(data.table,frank)
 importFrom(data.table,rbindlist)
